<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/llpayment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/dimen_history_one"
            android:background="@null"
            android:src="@drawable/scan_card" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="OR"
            android:textColor="#a1a4a8"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.cabrunzltd.user.component.MyFontEdittextView
            android:id="@+id/edtRegisterCreditCardNamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext"
            android:hint="@string/text_credit_card_name"
            android:inputType="text"
            android:nextFocusDown="@+id/expMonth"
            android:nextFocusForward="@+id/expMonth"
            android:nextFocusRight="@+id/expMonth"
            android:singleLine="true"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.cabrunzltd.user.component.MyFontEdittextView
            android:id="@+id/edtRegisterCreditCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext"
            android:hint="@string/text_credit_card_number"
            android:inputType="numberDecimal"
            android:nextFocusDown="@+id/expMonth"
            android:nextFocusForward="@+id/expMonth"
            android:nextFocusRight="@+id/expMonth"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:orientation="horizontal" >

            <com.cabrunzltd.user.component.MyFontEdittextView
                android:id="@+id/edtRegisterexpMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_payment_small"
                android:gravity="center"
                android:hint="@string/text_mm"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:singleLine="true"
                android:nextFocusForward="@+id/save"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.cabrunzltd.user.component.MyFontEdittextView
                android:id="@+id/edtRegisterexpYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_payment_small"
                android:gravity="center"
                android:hint="@string/text_yy"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:nextFocusForward="@+id/save"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.cabrunzltd.user.component.MyFontEdittextView
                android:id="@+id/edtRegistercvc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:hint="@string/text_cvc"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:nextFocusForward="@+id/save"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llpayment"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <com.cabrunzltd.user.component.MyFontButton
            android:id="@+id/btnPaymentSkip"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_small"
            android:gravity="center"
            android:text="@string/text_skip"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_popup_big" />

        <com.cabrunzltd.user.component.MyFontButton
            android:id="@+id/btnAddPayment"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_small"
            android:gravity="center"
            android:text="@string/text_addpayment"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_popup_big" />
    </LinearLayout>

</RelativeLayout>